refactoring db logic
