# internal/models/database.go
@@ -1,5 +1,0 @@
-package models
-
-type Database struct {
-	Name string `json:"name"`
-}
