# internal/models/db-config.go
@@ -1,0 +1,9 @@
+package models
+
+type DbConfig struct {
+	Host     string `json:"host"`
+	Port     string `json:"port"`
+	Username string `json:"username"`
+	Password string `json:"password"`
+	Name     string `json:"name"`
+}
